--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,5 +1,5 @@
 <div class="message">
-  <h2><%= message_counter %>. Message from <%= message.from %> on <%= message.received %></h2>
+  <h2><%= message_counter+1 %>. Message on <%= message.received %></h2>
   <p>Message : <audio preload="none" controls="controls" src="<%= message.url %>"></p>
   <p><%= link_to "Delete", message_path(message.id), method: :delete %></p>
 </div>
